--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "@richellemayap/intl-input-isj-isi-three",
-  "version": "0.0.0",
+  "name": "intl-input-isj-isi-three",
+  "version": "1.0.2",
   "description": "Il s'agit d'un package pour la validation des numeros de telephone",
   "keywords": ["input" , "telephone number","validator"],
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/richelle777/package-validateur-numeros"
+  },
+
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
