--- a/projects/intl-input-isj-isi-three/package.json
+++ b/projects/intl-input-isj-isi-three/package.json
@@ -1,6 +1,12 @@
 {
   "name": "intl-input-isj-isi-three",
-  "version": "0.0.1",
+  "version": "1.0.2",
+  "description": "Il s'agit d'un package pour la validation des numeros de telephone",
+  "keywords": ["input" , "telephone number","validator"],
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/richelle777/package-validateur-numeros"
+  },
   "peerDependencies": {
     "@angular/common": "^13.3.0",
     "@angular/core": "^13.3.0"
