--- a/projects/intl-input-isj-isi-three/tsconfig.lib.json
+++ b/projects/intl-input-isj-isi-three/tsconfig.lib.json
@@ -6,6 +6,9 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "types": []
   },
   "exclude": [
